@@ -70,6 +70,8 @@ Core and builtins
 Extension Modules
 -----------------
 
+- Bug #1598620: A ctypes Structure cannot contain itself.
+ 
 - Bug #1588217: don't parse "= " as a soft line break in binascii's
   a2b_qp() function, instead leave it in the string as quopri.decode()
   does.
